# workshop-timer

./: .gitignore  Cargo.toml  Makefile  README.md  segments.yaml
scripts/: annotate.ps1  fullshot.ps1  measure.ps1  screenshot.ps1
src/: main.rs
