[package]
name = "workshop-timer"
version = "0.1.0"
edition = "2021"
description = "Always-on-top workshop segment timer"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rfd = "0.14"
png = "0.17"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
